# govee-sync

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  nlohmann_json.natvis  qt6.natvis
.github/workflows/: cmake-multi-platform.yml
cmake/: nlohmann.cmake  windeployqt.cmake
lib/: CMakeLists.txt
lib/govee/: CMakeLists.txt  govee.cpp  govee.h  goveeDevice.cpp  goveeDevice.h
resources/: resources.qrc
src/: CMakeLists.txt  govee.cpp  govee.h  main.cpp
